# Small-Micro-Cap

./: .gitignore  README.md  pyproject.toml  render.yaml
.claude/skills/landmine-screen/: SKILL.md  reference.md
.github/workflows/: ci.yml
config/: labels.yaml  thresholds.yaml  universe.yaml  universe_clean.yaml  universe_smallmicro.yaml
landmine/: __init__.py  _parallel.py  calibrate.py  cli.py  concepts.py  config.py  corroboration.py  dera.py  events.py  events_capture.py  filings.py  models.py  persistence.py  portfolio.py  rules_t2.py  scoring.py  staleness.py  synthetic.py  tier3.py  universe.py
landmine/data/: facts.py  mcp_parser.py  provider.py
landmine/rules/: base.py  cash_runway.py  dilution.py  earnings_quality.py  liquidity.py  negative_equity.py  registry.py
landmine_api/: __init__.py  app.py  engine.py
landmine_mcp/: __init__.py  claude_desktop_config.example.json  oauth.py  server.py  web.py
scripts/: build_skill.py
tests/: gen_golden.py  test_api.py  test_backtest.py  test_calibrate.py  test_companyfacts.py  test_concurrency.py  test_corroboration.py  test_dera.py  test_determinism.py  test_engine_concurrency.py  test_events_capture.py  test_events_edgar.py  test_filings.py  test_golden.py  test_mcp.py  test_mcp_oauth.py  test_mcp_web.py  test_parser.py  test_persistence.py  test_pit.py  test_portfolio.py  test_rules.py  test_skill.py  test_staleness.py  test_tier2.py  test_tier3.py  test_triage.py  test_universe.py
tests/fixtures/: golden_2026-06-02.json
tests/fixtures/companyfacts/: CIK0009999991.json  CIK0009999992.json  demo_universe.yaml
tests/fixtures/dera/: num.txt  sub.txt
tests/fixtures/events/: AMC.json  BYND.json  CENN.json  NVDA.json  SPCE.json  WKHS.json  _CLIFFCO.json
tests/fixtures/events_raw/: _CAPCO.8k.txt  _CAPCO.audit.txt  _CAPCO.late.txt  _CAPCO.offerings.txt
tests/fixtures/filings/: WKHS__going_concern.txt  manifest.json
tests/fixtures/raw/: AAPL.txt  AMC.txt  BYND.txt  CENN.txt  COST.txt  DECK.txt  HD.txt  INO.txt  MSFT.txt  NVDA.txt  PLUG.txt  SBUX.txt  SPCE.txt  WKHS.txt  _CLIFFCO.txt
tests/fixtures/tier3/: WKHS.json
tests/fixtures/universe/: company_tickers.json  sizes.json
