[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "landmine-screen"
version = "0.1.0"
description = "Tier 1 deterministic landmine screen for micro/small-cap equities (SEC EDGAR XBRL, point-in-time)"
requires-python = ">=3.10"
dependencies = ["PyYAML>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.6", "mypy>=1.8", "types-PyYAML"]

[project.scripts]
landmine = "landmine.cli:main"

[tool.setuptools.packages.find]
include = ["landmine*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# pycodestyle errors, pyflakes, import order, pyupgrade, flake8-bugbear.
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
# third-party deps are optional/untyped (anthropic is lazy-imported; yaml ships no
# inline types) — don't fail the type check on their behalf.
ignore_missing_imports = true
disable_error_code = ["import-untyped"]
warn_unused_ignores = true
# Pragmatic baseline: the engine isn't fully annotated, and the rules lean on
# the AsOfView returning non-None once a guard has checked it — niceties mypy
# can't see. strict_optional stays off so those guarded accesses don't error;
# ratchet this up as annotations are added.
strict_optional = false
files = ["landmine"]
