[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "landmine-screen"
version = "0.1.0"
description = "Tier 1 deterministic landmine screen for micro/small-cap equities (SEC EDGAR XBRL, point-in-time)"
requires-python = ">=3.10"
dependencies = [
    "PyYAML>=6.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=7", "httpx>=0.27"]

[project.scripts]
landmine = "landmine.cli:main"

[tool.setuptools.packages.find]
include = ["landmine*", "landmine_api*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
